Front end changed

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Drift - A fully responsive, HTML5 based admin template">
-    <meta name="keywords" content="Responsive, HTML5, admin theme, business, professional, jQuery, web design, CSS3, sass">
+    <meta name="description" content="Employee Acceleration Program">
 
     <!-- Logo -->
     <link rel="shortcut icon" type="image/png" href="/assets/images/logo/logo.png"/>
