Front end improvements

--- a/public/app/views/admin/dashboard/manage-courses.html
+++ b/public/app/views/admin/dashboard/manage-courses.html
@@ -54,7 +54,7 @@
                             <!-- /badges -->
 
                             <!-- Card Title-->
-                            <h3 class="card-title font-weight-normal text-truncate mb-3">{{ course.course_name }}</h3>
+                            <h3 class="card-title font-weight-normal text-truncate text-uppercase mb-3">{{ course.course_name }}</h3>
                             <!-- Card Title-->
 
                             <p class="card-text">
