--- a/public/app/views/users/dashboard/courses.html
+++ b/public/app/views/users/dashboard/courses.html
@@ -58,7 +58,7 @@
                             <!-- Card Title-->
 
                             <p class="card-text">
-                                <i class="icon icon-location icon-fw mr-1"></i><span>{{ course.timestamp |  date: 'h:mm a, d MMM y' }}</span>
+                                <i class="icon icon-timer icon-fw mr-1"></i><span>{{ course.timestamp |  date: 'h:mm a, d MMM y' }}</span>
                             </p>
 
                             <!-- Content Area -->
