--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -24,9 +24,13 @@
     <link rel="stylesheet" href="/assets/modules/perfect-scrollbar/css/perfect-scrollbar.css">
     <!-- /perfect scrollbar stylesheet -->
 
-    <!-- Load Styles -->    <link rel="stylesheet" href="/assets/modules/owl.carousel/dist/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="/assets/modules/chartist/dist/chartist.min.css">
+    <!-- Load Styles -->
     <link rel="stylesheet" href="/assets/css/semidark-style-1.min.css">
+    <!-- /load styles -->
+
+    <!-- Load Styles -->
+    <link rel="stylesheet" href="/assets/modules/owl.carousel/dist/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="/assets/modules/chartist/dist/chartist.min.css">
     <!-- /load styles -->
 
     <!-- App config -->
@@ -139,17 +143,10 @@
 
                                     <!-- Dropdown Option -->
                                     <div class="dropdown-menu dropdown-menu-right">
-                                        <div class="dt-avatar-wrapper flex-nowrap p-6 mt-n2 bg-gradient-purple text-white rounded-top">
-                                            <img class="dt-avatar" src="/assets/images/user-avatar/domnic-harris.jpg" alt="Pankaj Tanwar">
-                                            <span class="dt-avatar-info">
-                                              <span class="dt-avatar-name">Pankaj</span>
-                                              <span class="f-12">Employee</span>
-                                            </span>
-                                        </div>
                                         <a class="dropdown-item" href="javascript:void(0)"> <i class="icon icon-user icon-fw mr-2 mr-sm-1"></i>Account
                                         </a> <a class="dropdown-item" href="javascript:void(0)">
                                         <i class="icon icon-settings icon-fw mr-2 mr-sm-1"></i>Settings </a>
-                                        <a class="dropdown-item" href="#" ng-click="main.logout();"> <i class="icon icon-editors icon-fw mr-2 mr-sm-1"></i>Logout
+                                        <a class="dropdown-item" href="#" ng-click="main.logout();"> <i class="icon icon-logout icon-fw mr-2 mr-sm-1"></i>Logout
                                         </a>
                                     </div>
                                     <!-- /dropdown option -->
@@ -380,12 +377,13 @@
     <script src="/assets/modules/sweetalert2/dist/sweetalert2.js"></script>
     <script src="/assets/js/functions.js"></script>
     <script src="/assets/js/customizer.js"></script>
-    <script src="/assets/js/custom/notification-alert.js"></script>
+
+    <!-- Custom JavaScript -->
+    <script src="/assets/js/script.js"></script>
 
     <!-- Custom JavaScript -->
     <script src="/assets/modules/chartist/dist/chartist.min.js"></script>
     <script src="/assets/modules//owl.carousel/dist/owl.carousel.min.js"></script>
-    <script src="/assets/js/script.js"></script>
     <script src="/assets/js/custom/charts/dashboard-listing.js"></script>
 </body>
 
