--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -82,8 +82,7 @@
                         <!-- Brand logo -->
                         <span class="dt-brand__logo">
                             <a class="dt-brand__logo-link" href="#">
-                              <!--<img class="dt-brand__logo-img d-none d-sm-inline-block" src="/assets/images/logo.png" alt="Drift">
-                              <img class="dt-brand__logo-symbol d-sm-none" src="/assets/images/logo-symbol.png" alt="Drift">-->
+                              <img class="dt-brand__logo-img d-none d-sm-inline-block" src="/assets/images/logo-main.jpg" alt="Drift">
                             </a>
                           </span>
                         <!-- /brand logo -->
