Setting and home page updated

--- a/public/app/views/admin/dashboard/manage-users.html
+++ b/public/app/views/admin/dashboard/manage-users.html
@@ -28,7 +28,7 @@
                         <tr ng-repeat="user in userManagement.users">
                             <th scope="row">{{ $index + 1}}</th>
                             <td>{{ user.name }}</td>
-                            <td>@{{ user.username }}</td>
+                            <td>{{ user.username }}</td>
                             <td>{{ user.email }}</td>
                             <td>{{ user.permission }}</td>
                             <td>{{ user.position }}</td>
