--- a/public/app/views/users/dashboard/workshops.html
+++ b/public/app/views/users/dashboard/workshops.html
@@ -83,8 +83,7 @@
                     <!-- /pricing -->
 
                     <!-- Card Button -->
-                    <a href="javascript:void(0)" class="btn btn-success text-uppercase"><i class="icon icon-circle-check-o icon-fw"></i> Going </a>
-                    <!-- /card button -->
+                    <a href="javascript:void(0)" class="btn btn-outline-success text-uppercase"><i class="icon icon-circle-check-o icon-fw"></i> Going </a>
                 </div>
                 <!-- /card footer -->
 
