Work files in courses added

--- a/public/app/views/admin/dashboard/add-new-course.html
+++ b/public/app/views/admin/dashboard/add-new-course.html
@@ -40,9 +40,16 @@
                     <div class="form-row">
                         <div class="col-sm-12 mb-3">
                             <label>Course Poster </label>
-                            <input class="form-control" type="file" file-model="file.thumbnail" name="thumbnail">
+                            <input class="form-control" type="file" file-model="file.thumbnail" name="thumbnail" required>
                         </div>
                     </div>
+                    <div class="form-row">
+                        <div class="col-sm-12 mb-3">
+                            <label>Upload Course File </label>
+                            <input class="form-control" type="file" file-model="file.myfile" name="myfile" required>
+                        </div>
+                    </div>
+
                     <button class="btn btn-primary" type="submit">Add Course Now</button>
                 </form>
                 <!-- /form -->
