--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -95,6 +95,22 @@
                     <!-- /brand -->
 
                     <!-- Header toolbar-->
+                    <div class="dt-header__toolbar">
+
+                        <!-- Search box -->
+                        <form class="search-box" style="align-items: center">
+                            <div class="input-group">
+                                <div class="input-group-append">
+                                    <a href="/" class="btn btn-primary rounded-lg-0 text-uppercase text-center" type="button">Employee Acceleration Program
+                                    </a>
+                                </div>
+                            </div>
+                        </form>
+                        <!-- /search box -->
+                    </div>
+
+
+                        <!-- Header toolbar-->
                     <div class="dt-header__toolbar" ng-show="main.isLoggedIn">
 
                         <!-- Header Menu Wrapper -->
