--- a/public/app/views/users/dashboard/course-page.html
+++ b/public/app/views/users/dashboard/course-page.html
@@ -42,10 +42,15 @@
             <!-- /overlay content -->
 
         </div>
+        <div ng-show="coursePage.course.course_file_url" class="mb-6">
+            <a href="assets/uploads/{{ coursePage.course.course_file_url }}" target="_blank" class="btn btn-primary btn-block">View Course File</a>
+        </div>
         <!-- /card -->
 
     </div>
     <!-- /grid item -->
+
+
 
     <div class="col-xl-12 text-center rounded-circle">
 
