--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -201,7 +201,7 @@
                             <form class="search-box" style="align-items: center">
                                 <div class="input-group">
                                     <div class="input-group-append">
-                                        <a href="/" class="btn btn-primary rounded-lg-0 text-uppercase text-center" type="button">Employee Acceleration Program
+                                        <a href="/" class="btn btn-primary rounded-lg-0 text-uppercase text-center" type="button"> Acceleration Program
                                         </a>
                                     </div>
                                 </div>
