--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -70,7 +70,7 @@
         <div class="dt-root__inner">
 
             <!-- Login Container -->
-            <div class="dt-login--container" style="background-image: url('https://i.pinimg.com/originals/0f/01/b1/0f01b11dabc8378389f7fcbe2e7bb348.jpg');background-size: cover" ng-show="main.home && !main.isLoggedIn">
+            <div class="dt-login--container" style="background-image: url('http://getwallpapers.com/wallpaper/full/b/5/a/1016571-download-free-wallpaper-library-1920x1080-for-android-40.jpg');background-size: cover" ng-show="main.home && !main.isLoggedIn">
 
                 <!-- Login Content -->
                 <div class="dt-login__content-wrapper">
