--- a/public/app/views/users/dashboard/course-page.html
+++ b/public/app/views/users/dashboard/course-page.html
@@ -42,8 +42,18 @@
             <!-- /overlay content -->
 
         </div>
+
         <div ng-show="coursePage.course.course_file_url" class="mb-6">
-            <a href="assets/uploads/{{ coursePage.course.course_file_url }}" target="_blank" class="btn btn-primary btn-block">View Course File</a>
+<!--
+            <button type="submit" onclick="window.open('/assets/uploads/{{ coursePage.course.course_file_url }}')">Download!</button>
+-->
+
+
+            <!--<form method="get" action="/assets/uploads/{{ coursePage.course.course_file_url }}">
+                <button type="submit">Download!</button>
+            </form>-->
+
+            <a target="_self" href="/assets/uploads/{{ coursePage.course.course_file_url }}" download="yourwork" class="btn btn-primary btn-block">View Course File</a>
         </div>
         <!-- /card -->
 
