--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -197,15 +197,23 @@
                         <!-- Header toolbar-->
                         <div class="dt-header__toolbar">
 
-                            <!-- Search box -->
-                            <form class="search-box" style="align-items: center">
-                                <div class="input-group">
-                                    <div class="input-group-append">
-                                        <a href="/" class="btn btn-primary rounded-lg-0 text-uppercase text-center" type="button"> Acceleration Program
+                            <!-- Header Menu Wrapper -->
+                            <div class="dt-nav-wrapper">
+
+                                <!-- Header Menu -->
+                                <ul class="dt-nav">
+                                    <li class="dt-nav__item dropdown">
+                                        <!-- Dropdown Link -->
+                                        <a href="/" class="dt-nav__link no-arrow dt-avatar-wrapper"
+                                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <span style="font-size: 23px;color: white" class="dt-avatar-name">Acceleration Program</span>
                                         </a>
-                                    </div>
-                                </div>
-                            </form>
+                                        <!-- /dropdown link -->
+                                    </li>
+                                </ul>
+                                <!-- /header menu -->
+                            </div>
+                            <!-- Header Menu Wrapper -->
                             <!-- /search box -->
                         </div>
 
