--- a/public/app/views/users/dashboard/course-page.html
+++ b/public/app/views/users/dashboard/course-page.html
@@ -53,7 +53,7 @@
                 <button type="submit">Download!</button>
             </form>-->
 
-            <a target="_self" href="/assets/uploads/{{ coursePage.course.course_file_url }}" download="yourwork" class="btn btn-primary btn-block">View Course File</a>
+            <a target="_self" href="/assets/uploads/{{ coursePage.course.course_file_url }}" download="{{ coursePage.course.course_file_url }}" class="btn btn-primary btn-block">View Course File</a>
         </div>
         <!-- /card -->
 
